--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
 }
 
-.App-link {
-  color: #09d3ac;
+.MainContainer {
+  width: 300px;
+  height: 500px;
+}
+
+.Question {
+  height: 70%;
+  margin: 20px;
+}
+
+.Control {
+  margin: 20px;
+}
+
+.DownVote {
+  width: 30px;
+  height: 30px;
 }
